# CG_fall_11

./: .gitignore  CMakeLists.txt  README.md
src/: Application.cpp  Application.h  Color.cpp  Color.h  EquationPlane.cpp  EquationPlane.h  Line.cpp  Line.h  Line2D.cpp  Line2D.h  LineSegment.cpp  LineSegment.h  LineSegment2D.cpp  LineSegment2D.h  Matrix.cpp  Matrix.h  Parallelepiped.cpp  Parallelepiped.h  Point.h  Pyramid.cpp  Pyramid.h  Surface.cpp  Surface.h  ZBuffer.cpp  ZBuffer.h  main.cpp  rotationMatrixes.cpp  rotationMatrixes.h  settings.h
